Change race numbers to 1-151 to match actual duck count
Race Number System:
- Competitor ducks: 1-150 (shuffled randomly)
- Player duck: 151 (or choose 1-151)
- No more random 4-digit numbers

Changes:
- Competitor ducks get shuffled numbers from 1-150 array
- Player defaults to #151 instead of random 1-9999
- Input field updated: max="151" and placeholder="1-151"
- Makes race numbers realistic for 151 total ducks (150 + player)

--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
         <h1>🦆 Rubber Duck River Race 🌊</h1>
         <p>Navigate your rubber duck down a treacherous river!</p>
         <p style="margin-top: 20px;"><strong>Choose Your Race Number:</strong></p>
-        <input type="number" id="duckNumber" min="1" max="9999" placeholder="1-9999"
+        <input type="number" id="duckNumber" min="1" max="151" placeholder="1-151"
                style="font-size: 32px; padding: 10px 20px; border-radius: 8px; border: 3px solid #1a3a52;
                       text-align: center; width: 200px; margin-bottom: 20px;" value="">
-        <p style="font-size: 14px; margin-top: -10px; color: #aaa;">(Leave blank for random)</p>
+        <p style="font-size: 14px; margin-top: -10px; color: #aaa;">(Leave blank for #151)</p>
         <p><strong>Controls:</strong> Arrow Keys or WASD</p>
         <p>← → / A D: Steer | ↑ ↓ / W S: Speed Control | SPACE: Jump!</p>
         <p>Race against 2000 other ducks! Dodge obstacles and bump competitors into danger!</p>
