Change jump button to 'HOP' to differentiate from FAST button

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <div id="mobileControls" style="display: none;">
         <div class="mobile-steering">
             <button id="leftBtn" class="mobile-btn">◀</button>
-            <button id="jumpBtn" class="mobile-btn" style="font-size: 28px;">⬆<br><span style="font-size: 14px;">JUMP</span></button>
+            <button id="jumpBtn" class="mobile-btn" style="font-size: 24px; font-weight: bold; padding: 15px;">HOP</button>
             <button id="rightBtn" class="mobile-btn">▶</button>
         </div>
         <div class="mobile-speed">
