Move HOP button to right side with speed controls for better mobile UX

--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
     <div id="mobileControls" style="display: none;">
         <div class="mobile-steering">
             <button id="leftBtn" class="mobile-btn">◀</button>
-            <button id="jumpBtn" class="mobile-btn" style="font-size: 24px; font-weight: bold; padding: 15px;">HOP</button>
             <button id="rightBtn" class="mobile-btn">▶</button>
         </div>
         <div class="mobile-speed">
             <button id="gasBtn" class="mobile-btn mobile-speed-btn">⬆<br><span style="font-size: 12px;">FAST</span></button>
+            <button id="jumpBtn" class="mobile-btn mobile-speed-btn" style="font-size: 18px; font-weight: bold;">HOP</button>
             <button id="brakeBtn" class="mobile-btn mobile-speed-btn">⬇<br><span style="font-size: 12px;">SLOW</span></button>
         </div>
     </div>
