Restore proper Level 1 ending with button to start Level 2

--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
         <h1>Race Complete!</h1>
         <p id="resultText"></p>
         <p id="finalScore"></p>
+        <button id="level2Btn" style="display: none; margin-bottom: 10px;">🕳️ Enter the Cave (Level 2)</button>
         <button id="restartBtn">Race Again</button>
     </div>
 
