Add Rotary logo and duck image to start and end screens

--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
     </div>
 
     <div id="startScreen">
+        <img src="rotary_3.png" alt="Rotary Logo" style="width: 200px; margin-bottom: 20px;">
+        <img src="duck_image.jpg" alt="Rubber Duck" style="width: 150px; margin-bottom: 20px; border-radius: 10px;">
         <h1>🦆 Rubber Duck River Race 🌊</h1>
         <p>Navigate your rubber duck down a treacherous river!</p>
         <p style="margin-top: 20px;"><strong>Choose Your Race Number:</strong></p>
@@ -287,6 +289,8 @@
     </div>
 
     <div id="endScreen" class="hidden">
+        <img src="rotary_3.png" alt="Rotary Logo" style="width: 200px; margin-bottom: 20px;">
+        <img src="duck_image.jpg" alt="Rubber Duck" style="width: 150px; margin-bottom: 20px; border-radius: 10px;">
         <h1>Race Complete!</h1>
         <p id="resultText"></p>
         <p id="finalScore"></p>
