Move duck image inline with titles to replace emoji

--- a/index.html
+++ b/index.html
@@ -274,8 +274,7 @@
 
     <div id="startScreen">
         <img src="rotary_3.png" alt="Rotary Logo" style="width: 200px; margin-bottom: 20px;">
-        <img src="duck_image.jpg" alt="Rubber Duck" style="width: 150px; margin-bottom: 20px; border-radius: 10px;">
-        <h1>🦆 Rubber Duck River Race 🌊</h1>
+        <h1><img src="duck_image.jpg" alt="Rubber Duck" style="width: 60px; vertical-align: middle; border-radius: 8px; margin-right: 10px;"> Rubber Duck River Race 🌊</h1>
         <p>Navigate your rubber duck down a treacherous river!</p>
         <p style="margin-top: 20px;"><strong>Choose Your Race Number:</strong></p>
         <input type="number" id="duckNumber" min="1" max="101" placeholder="1-101"
@@ -290,8 +289,7 @@
 
     <div id="endScreen" class="hidden">
         <img src="rotary_3.png" alt="Rotary Logo" style="width: 200px; margin-bottom: 20px;">
-        <img src="duck_image.jpg" alt="Rubber Duck" style="width: 150px; margin-bottom: 20px; border-radius: 10px;">
-        <h1>Race Complete!</h1>
+        <h1><img src="duck_image.jpg" alt="Rubber Duck" style="width: 60px; vertical-align: middle; border-radius: 8px; margin-right: 10px;"> Race Complete!</h1>
         <p id="resultText"></p>
         <p id="finalScore"></p>
         <button id="restartBtn">Race Again</button>
