--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             align-items: center;
             color: white;
             pointer-events: all;
-            z-index: 100;
+            z-index: 200;
+            padding-top: 40px;
+            overflow-y: auto;
         }
 
         #startScreen h1, #endScreen h1 {
@@ -218,7 +220,20 @@
 
             #startScreen h1,
             #endScreen h1 {
-                font-size: 28px;
+                font-size: 24px;
+                line-height: 1.3;
+            }
+
+            #startScreen img[src="rotary_3.png"],
+            #endScreen img[src="rotary_3.png"] {
+                width: 120px !important;
+                margin-bottom: 10px !important;
+            }
+
+            #startScreen h1 img,
+            #endScreen h1 img {
+                width: 40px !important;
+                margin-right: 5px !important;
             }
 
             button {
