Add race timer to HUD and final score display

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
             <div class="hud-item">Position: <span id="position">1</span>/<span id="totalDucks">2000</span></div>
             <div class="hud-item">Health: <span id="health">100</span>%</div>
             <div class="hud-item">Distance: <span id="distance">0</span>m</div>
+            <div class="hud-item">Time: <span id="time">0:00</span></div>
             <div class="hud-item">Score: <span id="score">0</span></div>
         </div>
 
@@ -330,6 +331,6 @@
             }
         }
     </script>
-    <script type="module" src="game.js?v=163"></script>
+    <script type="module" src="game.js?v=164"></script>
 </body>
 </html>
